syntax = "proto3";
option go_package = "github.com/kanguki/grpc-microservices-example/auth/auth";
service Auth {
	rpc Logout(LogoutRequest) returns (LogoutResponse) {}
	rpc Authenticate(LoginRequest) returns (LoginResponse) {}
	rpc Authorize(AuthorizeRequest) returns (AuthorizeResponse) {}
}

message LoginRequest {
	string username=1;
	string password=2;
}
message LoginResponse {
	string token=1;
}

enum ACL {
	READ=0;
	WRITE=1;
}
message AuthorizeRequest {
	string token=1;
	repeated ACL acls=2; //acls that clients need
}
message AuthorizeResponse {
	repeated ACL unauthorizedACLs=1;
}

message LogoutRequest {
	string token=1;
}

message LogoutResponse {
}